--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.1",
     "module-alias": "^2.2.2",
+    "moment": "^2.30.1",
     "moment-timezone": "^0.5.34",
     "mongodb": "^6.3.0",
     "node-cron": "^3.0.1",
